@@ -7,7 +7,7 @@ $ #DISPLAYRequiresArg
 $ #WarnDisplaySet
 # warning: could not set environment variable 'DISPLAY'\n
 $ #Usage
-# Blackbox %s: (c) 2001 Sean 'Shaleh' Perry\n\
+# Blackbox %s: (c) 2002 - 2001 Sean 'Shaleh' Perry\n\
   \t\t\t  1997 - 2000 Brad Hughes\n\n\
   -display <string>\t\tuse display connection.\n\
   -rc <string>\t\t\tuse alternate resource file.\n\
