@@ -51,7 +51,13 @@ Changes from 0.61.1 to 0.62.0:
   - maximize a window via bbkeys and the maximize button is not redrawn, fixed
   - now exit with an error code if an unknown option is passed
   - autoraise and multiple dialog windows yields segv bug fixed
+    also lengthened the default auto raise delay from 250 to 400
+  - another iteration of autoraise and dialog box handling, this time we
+    noticed that nothing ever reset blackbox.focused_window to 0 when a window
+    was removed
   - check if the window is visible before changeBlackboxHints() calls maximize
+  - placeWindow no longer takes edgeSnapThreshhold into account
+  - ignore style files ending in ~
   - added my name to the code, updated the version output
     
 Changes from 0.61.0 to 0.61.1:
